HVAC Backup 2/objects/Contract_WorkOrder__c.object
<CustomObject>
    <fields>
        <fullName>CP_Code__c</fullName>
        <label>CP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CP</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract WorkOrders</relationshipLabel>
        <relationshipName>Contract_WorkOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_No__c</fullName>
        <label>Line Item No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIGO__c</fullName>
        <label>MIGO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIRO__c</fullName>
        <label>MIRO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Contract WorkOrders</relationshipLabel>
        <relationshipName>Contract_WorkOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Ticket</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Contract WorkOrders</relationshipLabel>
        <relationshipName>Contract_WorkOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Number__c</fullName>
        <label>Vendor Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workorder_Amount__c</fullName>
        <label>Workorder Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workorder_Date__c</fullName>
        <label>Workorder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workorder_Number__c</fullName>
        <label>Workorder Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract WorkOrder</label>
    <nameField>
        <displayFormat>CW-{0000}</displayFormat>
        <label>Contract WorkOrder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract WorkOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>